--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
 version: '3.1'
 services:
+#  app:
+#    image: georgia-backend:latest
+#    container_name: app
+#    depends_on:
+#      - db
   db:
     image: postgres:latest
+    container_name: db
     restart: always
     ports:
       - "5432:5432"
